website: explicitly list 1H devmode modules

--- a/index.html
+++ b/index.html
@@ -260,10 +260,6 @@
                 <div class="chooser-overall h1"> <!-- {{{1 -->
                     <div class="chooser_text h1"><sup>1</sup>H–<sup>1</sup>H</div>
                     <div class="chooser_modules h1">
-                        <!-- it is very important, when adding future modules here, that
-                            the input id (and the label for-attribute) is h1_xxx_xxx and
-                            corresponds EXACTLY to the backend module file which should be
-                            H_XXX_XXX.js. -->
                         <ul>
                             <!-- 1H: non-devmode modules {{{2 -->
                             <li id="li_h1_none">
@@ -337,6 +333,76 @@
                             <li>
                                 <input type="radio" name="h1" id="h1_tse_psyche"></input>
                                 <label for="h1_tse_psyche">1D TSE-PSYCHE</label>
+                            </li>
+                            <!-- end 1H modules }}}2 -->
+                            <!-- 1H: devmode modules {{{2 -->
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY"></input>
+                                <label for="H_COSY">H_COSY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_QF"></input>
+                                <label for="H_COSY_QF">H_COSY_QF</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_CLIP_COSY"></input>
+                                <label for="H_CLIP_COSY">H_CLIP_COSY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_DQF_COSY"></input>
+                                <label for="H_DQF_COSY">H_DQF_COSY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TOCSY"></input>
+                                <label for="H_TOCSY">H_TOCSY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_NOESY"></input>
+                                <label for="H_NOESY">H_NOESY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_ROESY"></input>
+                                <label for="H_ROESY">H_ROESY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_ROESY_AD"></input>
+                                <label for="H_ROESY_AD">H_ROESY_AD</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_ROESY_ST"></input>
+                                <label for="H_COSY_ROESY_ST">H_COSY_ROESY_ST</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_NOESY"></input>
+                                <label for="H_COSY_NOESY">H_COSY_NOESY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_NOESY_ST"></input>
+                                <label for="H_COSY_NOESY_ST">H_COSY_NOESY_ST</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_TOCSY"></input>
+                                <label for="H_COSY_TOCSY">H_COSY_TOCSY</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_COSY_TOCSY_ST"></input>
+                                <label for="H_COSY_TOCSY_ST">H_COSY_TOCSY_ST</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_JRES"></input>
+                                <label for="H_JRES">H_JRES</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_PSYCHE_JRES"></input>
+                                <label for="H_PSYCHE_JRES">H_PSYCHE_JRES</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_PSYCHE"></input>
+                                <label for="H_PSYCHE">H_PSYCHE</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TSE_PSYCHE"></input>
+                                <label for="H_TSE_PSYCHE">H_TSE_PSYCHE</label>
                             </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
