website: add placeholder text for manual-input

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             </div><!-- /chooser -->
 
             <div id="manual-input"> <!-- {{{1 -->
-                ...or choose your own: <input id="manual-modules" type="text" size=60 maxlength=1000>
+                ...or choose your own: <input id="manual-modules" type="text" placeholder="enter module codes separated by spaces..." size=60 maxlength=1000>
                 </div><!-- /manual-input }}}1 -->
 
             <div id="buttons"> <!-- {{{1 -->
