website: don't mention explicitly that it's on GitHub

--- a/index.html
+++ b/index.html
@@ -595,7 +595,8 @@
                 </dl>
             </div><!-- /faq }}}1 -->
 
-            <span class="small">&copy; Jonathan Yong, 2020–2021. Source code is available on <a href="https://github.com/yongrenjie/genesis">GitHub</a>. Current version: v<span id="version"></span></span>
+            <span class="small">&copy; Jonathan Yong, 2020–2021. Current version: v<span id="version"></span></span>
+            <!-- Source code is available on <a href="https://github.com/yongrenjie/genesis">GitHub</a>. -->
         </div><!-- /main-wrapper -->
 
         <script nomodule type="text/javascript">
