--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@
                             <li>Claridge, T. D. W.; Mayzel, M.; Kupče, Ē. Triplet NOAH supersequences optimised for small molecule structure characterisation. <i>Magn. Reson. Chem.</i> <b>2019,</b> <i>57</i> (11), 946–952. <a href="https://doi.org/10.1002/mrc.4887">DOI: 10.1002/mrc.4887</a>.</li>
                             <li>Kupče, Ē.; Claridge, T. D. W. New NOAH modules for structure elucidation at natural isotopic abundance. <i>J. Magn. Reson.</i> <b>2019,</b> <i>307,</i> 106568. <a href="https://doi.org/10.1016/j.jmr.2019.106568">DOI: 10.1016/j.jmr.2019.106568</a>.</li>
                             <li>Hansen, A. L.; Kupče, Ē.; Li, D.-W.; Bruschweiler-Li, L.; Wang, C.; Brüschweiler, R. 2D NMR-Based Metabolomics with HSQC/TOCSY NOAH Supersequences. <i>Anal. Chem.</i> <b>2021,</b> <i>93</i> (15), 6112–6119. DOI: <a href="https://doi.org/10.1021/acs.analchem.0c05205">10.1021/acs.analchem.0c05205</a>.</li>
+                            <li>Yong, J. R. J.; Hansen, A. L.; Kupče, Ē.; Claridge, T. D. W. Increasing sensitivity and versatility in NMR supersequences with new HSQC-based modules. <i>J. Magn. Reson.</i> <b>2021,</b> <i>329,</i> 107027. DOI: <a href="https://doi.org/10.1016/j.jmr.2021.107027">10.1016/j.jmr.2021.107027</a>.</li>
                         </ol>
                     </dd> <!-- }}}2 -->
 
