pprogs: add C_SEHSQC_IPAP module

--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
                                 <label for="C_SEHSQC_DP">C_SEHSQC_DP</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="C_SEHSQC_IPAP"></input>
+                                <label for="C_SEHSQC_IPAP">C_SEHSQC_IPAP</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="C_SEHSQC_TOCSY"></input>
                                 <label for="C_SEHSQC_TOCSY">C_SEHSQC_TOCSY</label>
                             </li>
