pprogs, website: add C_HMBC_CFDD module

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                                 <input type="radio" name="hmbc" id="C_HMBC_CFG"></input>
                                 <label for="C_HMBC_CFG">C_HMBC_CFG</label>
                             </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="C_HMBC_CFDD"></input>
+                                <label for="C_HMBC_CFDD">C_HMBC_CFDD</label>
+                            </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
                     </div>
