--- a/index.html
+++ b/index.html
@@ -412,6 +412,10 @@
                                 <input type="radio" name="h1" id="H_TSE_PSYCHE"></input>
                                 <label for="H_TSE_PSYCHE">H_TSE_PSYCHE</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TT_CN"></input>
+                                <label for="H_TT_CN">H_TT_CN</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
