website, pprogs: add C_HSQC_COSY_CLIP_IA module

--- a/index.html
+++ b/index.html
@@ -250,6 +250,10 @@
                                 <label for="C_SEHSQC_DP">C_SEHSQC_DP</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="C_HSQC_COSY_CLIP_IA"></input>
+                                <label for="C_HSQC_COSY_CLIP_IA">C_HSQC_COSY_CLIP_IA</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="C_SEHSQC_IPAP"></input>
                                 <label for="C_SEHSQC_IPAP">C_SEHSQC_IPAP</label>
                             </li>
