pprogs, website: add H_TT_CR module

--- a/index.html
+++ b/index.html
@@ -420,6 +420,10 @@
                                 <input type="radio" name="h1" id="H_TT_CN"></input>
                                 <label for="H_TT_CN">H_TT_CN</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TT_CR"></input>
+                                <label for="H_TT_CR">H_TT_CR</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
