pprogs, website: add H_TT_DM module

--- a/index.html
+++ b/index.html
@@ -424,6 +424,10 @@
                                 <input type="radio" name="h1" id="H_TT_CR"></input>
                                 <label for="H_TT_CR">H_TT_CR</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TT_DM"></input>
+                                <label for="H_TT_DM">H_TT_DM</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
