website, pprogs: add H_CC_T module

--- a/index.html
+++ b/index.html
@@ -432,6 +432,10 @@
                                 <input type="radio" name="h1" id="H_TT_DM"></input>
                                 <label for="H_TT_DM">H_TT_DM</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_CC_T"></input>
+                                <label for="H_CC_T">H_CC_T</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
