pprogs, website: add C_HSQC_TOCSY_IA

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
                                 <label for="C_HSQC_COSY_DSE_IA">C_HSQC_COSY_DSE_IA</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="C_HSQC_TOCSY_IA"></input>
+                                <label for="C_HSQC_TOCSY_IA">C_HSQC_TOCSY_IA</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="C_SEHSQC_IPAP"></input>
                                 <label for="C_SEHSQC_IPAP">C_SEHSQC_IPAP</label>
                             </li>
