website, pprogs: add H_R_T module

--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@
                                 <input type="radio" name="h1" id="H_CC_T"></input>
                                 <label for="H_CC_T">H_CC_T</label>
                             </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_R_T"></input>
+                                <label for="H_R_T">H_R_T</label>
+                            </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
                     </div>
