website, pprogs: add a few more derivative modules

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
                                 <input type="radio" name="hmbc" id="C_HMBC_CFDD"></input>
                                 <label for="C_HMBC_CFDD">C_HMBC_CFDD</label>
                             </li>
+                            <li>
+                                <input type="radio" name="hmbc" id="C_HMBC_CF_K"></input>
+                                <label for="C_HMBC_CF_K">C_HMBC_CF_K</label>
+                            </li>
                             <!-- end HMBC modules }}}2 -->
                         </ul>
                     </div>
@@ -273,6 +277,18 @@
                                 <input type="radio" name="c13" id="C_SEHSQC_TOCSY_OR"></input>
                                 <label for="C_SEHSQC_TOCSY_OR">C_SEHSQC_TOCSY_OR</label>
                             </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_HSQC_F2J_K"></input>
+                                <label for="C_HSQC_F2J_K">C_HSQC_F2J_K</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_SEHSQC_F2J"></input>
+                                <label for="C_SEHSQC_F2J">C_SEHSQC_F2J</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_SEHSQC_F2J_K"></input>
+                                <label for="C_SEHSQC_F2J_K">C_SEHSQC_F2J_K</label>
+                            </li>
                             <!-- end 13C modules }}}2 -->
                         </ul>
                     </div>
@@ -443,6 +459,10 @@
                             <li>
                                 <input type="radio" name="h1" id="H_R_T"></input>
                                 <label for="H_R_T">H_R_T</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_TOCSY_K"></input>
+                                <label for="H_TOCSY_K">H_TOCSY_K</label>
                             </li>
                             <!-- end 1H modules }}}2 -->
                         </ul>
