website, pprogs: add C(I)_HSQC_COSY_IA modules

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                                 <input type="radio" name="ci13" id="CI_HSQC_F2J"></input>
                                 <label for="CI_HSQC_F2J">CI_HSQC_F2J</label>
                             </li>
+                            <li>
+                                <input type="radio" name="ci13" id="CI_HSQC_COSY_IA"></input>
+                                <label for="CI_HSQC_COSY_IA">CI_HSQC_COSY_IA</label>
+                            </li>
                             <!-- end 13C-INEPT modules }}}2 -->
                         </ul>
                     </div>
@@ -260,6 +264,10 @@
                             <li>
                                 <input type="radio" name="c13" id="C_HSQC_COSY_DSE_IA"></input>
                                 <label for="C_HSQC_COSY_DSE_IA">C_HSQC_COSY_DSE_IA</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_HSQC_COSY_IA"></input>
+                                <label for="C_HSQC_COSY_IA">C_HSQC_COSY_IA</label>
                             </li>
                             <li>
                                 <input type="radio" name="c13" id="C_HSQC_TOCSY_IA"></input>
