website, pprogs: rename modules, introduce [ID] substitution
The module renaming was mainly done in order to make sure that newly
defined delays did not exceed TopSpin's length limits (15 chars).

However, I also did not like the fact that the delay names did not
always correspond to the module code, so I *enforced* this by using [ID]
in the delay names (and gradient list names), This breaks some backwards
compatibility, but as far as I'm aware I'm the only one who knows about
the devmode modules, so we may as well break it in a glorious fashion by
renaming a ton of modules at once.

--- a/index.html
+++ b/index.html
@@ -156,32 +156,32 @@
                             </li>
                             <!-- 13C-INEPT: devmode modules {{{2 -->
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_TOCSY"></input>
-                                <label for="CI_HSQC_TOCSY">CI_HSQC_TOCSY</label>
+                                <input type="radio" name="ci13" id="CI_HSQCT"></input>
+                                <label for="CI_HSQCT">CI_HSQCT</label>
                             </li>
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_COSY"></input>
-                                <label for="CI_HSQC_COSY">CI_HSQC_COSY</label>
+                                <input type="radio" name="ci13" id="CI_HSQCC"></input>
+                                <label for="CI_HSQCC">CI_HSQCC</label>
                             </li>
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_COSY_CLIP"></input>
-                                <label for="CI_HSQC_COSY_CLIP">CI_HSQC_COSY_CLIP</label>
+                                <input type="radio" name="ci13" id="CI_HSQCC_CLIP"></input>
+                                <label for="CI_HSQCC_CLIP">CI_HSQCC_CLIP</label>
                             </li>
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_COSY_DSE"></input>
-                                <label for="CI_HSQC_COSY_DSE">CI_HSQC_COSY_DSE</label>
+                                <input type="radio" name="ci13" id="CI_HSQCC_DSE"></input>
+                                <label for="CI_HSQCC_DSE">CI_HSQCC_DSE</label>
                             </li>
                             <li>
                                 <input type="radio" name="ci13" id="CI_HSQC"></input>
                                 <label for="CI_HSQC">CI_HSQC</label>
                             </li>
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_F2J"></input>
-                                <label for="CI_HSQC_F2J">CI_HSQC_F2J</label>
+                                <input type="radio" name="ci13" id="CI_HSQCJ"></input>
+                                <label for="CI_HSQCJ">CI_HSQCJ</label>
                             </li>
                             <li>
-                                <input type="radio" name="ci13" id="CI_HSQC_COSY_IA"></input>
-                                <label for="CI_HSQC_COSY_IA">CI_HSQC_COSY_IA</label>
+                                <input type="radio" name="ci13" id="CI_HSQCC_IA"></input>
+                                <label for="CI_HSQCC_IA">CI_HSQCC_IA</label>
                             </li>
                             <!-- end 13C-INEPT modules }}}2 -->
                         </ul>
@@ -226,24 +226,24 @@
                                 <label for="C_HSQC">C_HSQC</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_F2J"></input>
-                                <label for="C_HSQC_F2J">C_HSQC_F2J</label>
+                                <input type="radio" name="c13" id="C_HSQCJ"></input>
+                                <label for="C_HSQCJ">C_HSQCJ</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY"></input>
-                                <label for="C_HSQC_COSY">C_HSQC_COSY</label>
+                                <input type="radio" name="c13" id="C_HSQCC"></input>
+                                <label for="C_HSQCC">C_HSQCC</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY_CLIP"></input>
-                                <label for="C_HSQC_COSY_CLIP">C_HSQC_COSY_CLIP</label>
+                                <input type="radio" name="c13" id="C_HSQCC_CLIP"></input>
+                                <label for="C_HSQCC_CLIP">C_HSQCC_CLIP</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY_DSE"></input>
-                                <label for="C_HSQC_COSY_DSE">C_HSQC_COSY_DSE</label>
+                                <input type="radio" name="c13" id="C_HSQCC_DSE"></input>
+                                <label for="C_HSQCC_DSE">C_HSQCC_DSE</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_TOCSY"></input>
-                                <label for="C_HSQC_TOCSY">C_HSQC_TOCSY</label>
+                                <input type="radio" name="c13" id="C_HSQCT"></input>
+                                <label for="C_HSQCT">C_HSQCT</label>
                             </li>
                             <li>
                                 <input type="radio" name="c13" id="C_SEHSQC"></input>
@@ -258,44 +258,44 @@
                                 <label for="C_SEHSQC_DP">C_SEHSQC_DP</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY_CLIP_IA"></input>
-                                <label for="C_HSQC_COSY_CLIP_IA">C_HSQC_COSY_CLIP_IA</label>
+                                <input type="radio" name="c13" id="C_HSQCC_CIA"></input>
+                                <label for="C_HSQCC_CIA">C_HSQCC_CIA</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY_DSE_IA"></input>
-                                <label for="C_HSQC_COSY_DSE_IA">C_HSQC_COSY_DSE_IA</label>
+                                <input type="radio" name="c13" id="C_HSQCC_DIA"></input>
+                                <label for="C_HSQCC_DIA">C_HSQCC_DIA</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_COSY_IA"></input>
-                                <label for="C_HSQC_COSY_IA">C_HSQC_COSY_IA</label>
+                                <input type="radio" name="c13" id="C_HSQCC_IA"></input>
+                                <label for="C_HSQCC_IA">C_HSQCC_IA</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_TOCSY_IA"></input>
-                                <label for="C_HSQC_TOCSY_IA">C_HSQC_TOCSY_IA</label>
+                                <input type="radio" name="c13" id="C_HSQCT_IA"></input>
+                                <label for="C_HSQCT_IA">C_HSQCT_IA</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_SEHSQC_IPAP"></input>
-                                <label for="C_SEHSQC_IPAP">C_SEHSQC_IPAP</label>
+                                <input type="radio" name="c13" id="C_SEHSQC_IA"></input>
+                                <label for="C_SEHSQC_IA">C_SEHSQC_IA</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_SEHSQC_TOCSY"></input>
-                                <label for="C_SEHSQC_TOCSY">C_SEHSQC_TOCSY</label>
+                                <input type="radio" name="c13" id="C_SEHSQCT"></input>
+                                <label for="C_SEHSQCT">C_SEHSQCT</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_SEHSQC_TOCSY_OR"></input>
-                                <label for="C_SEHSQC_TOCSY_OR">C_SEHSQC_TOCSY_OR</label>
+                                <input type="radio" name="c13" id="C_SEHSQCT_OR"></input>
+                                <label for="C_SEHSQCT_OR">C_SEHSQCT_OR</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_HSQC_F2J_K"></input>
-                                <label for="C_HSQC_F2J_K">C_HSQC_F2J_K</label>
+                                <input type="radio" name="c13" id="C_HSQCJ_K"></input>
+                                <label for="C_HSQCJ_K">C_HSQCJ_K</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_SEHSQC_F2J"></input>
-                                <label for="C_SEHSQC_F2J">C_SEHSQC_F2J</label>
+                                <input type="radio" name="c13" id="C_SEHSQCJ"></input>
+                                <label for="C_SEHSQCJ">C_SEHSQCJ</label>
                             </li>
                             <li>
-                                <input type="radio" name="c13" id="C_SEHSQC_F2J_K"></input>
-                                <label for="C_SEHSQC_F2J_K">C_SEHSQC_F2J_K</label>
+                                <input type="radio" name="c13" id="C_SEHSQCJ_K"></input>
+                                <label for="C_SEHSQCJ_K">C_SEHSQCJ_K</label>
                             </li>
                             <!-- end 13C modules }}}2 -->
                         </ul>
@@ -393,8 +393,8 @@
                                 <label for="H_CLIP_COSY">H_CLIP_COSY</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_DQF_COSY"></input>
-                                <label for="H_DQF_COSY">H_DQF_COSY</label>
+                                <input type="radio" name="h1" id="H_DQFCOSY"></input>
+                                <label for="H_DQFCOSY">H_DQFCOSY</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_TOCSY"></input>
@@ -413,40 +413,40 @@
                                 <label for="H_ROESY_AD">H_ROESY_AD</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_COSY_ROESY_ST"></input>
-                                <label for="H_COSY_ROESY_ST">H_COSY_ROESY_ST</label>
+                                <input type="radio" name="h1" id="H_CORO_ST"></input>
+                                <label for="H_CORO_ST">H_CORO_ST</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_COSY_NOESY"></input>
-                                <label for="H_COSY_NOESY">H_COSY_NOESY</label>
+                                <input type="radio" name="h1" id="H_CONO"></input>
+                                <label for="H_CONO">H_CONO</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_COSY_NOESY_ST"></input>
-                                <label for="H_COSY_NOESY_ST">H_COSY_NOESY_ST</label>
+                                <input type="radio" name="h1" id="H_CONO_ST"></input>
+                                <label for="H_CONO_ST">H_CONO_ST</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_COSY_TOCSY"></input>
-                                <label for="H_COSY_TOCSY">H_COSY_TOCSY</label>
+                                <input type="radio" name="h1" id="H_COTO"></input>
+                                <label for="H_COTO">H_COTO</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_COSY_TOCSY_ST"></input>
-                                <label for="H_COSY_TOCSY_ST">H_COSY_TOCSY_ST</label>
+                                <input type="radio" name="h1" id="H_COTO_ST"></input>
+                                <label for="H_COTO_ST">H_COTO_ST</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_JRES"></input>
                                 <label for="H_JRES">H_JRES</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_PSYCHE_JRES"></input>
-                                <label for="H_PSYCHE_JRES">H_PSYCHE_JRES</label>
+                                <input type="radio" name="h1" id="H_JRES_PS"></input>
+                                <label for="H_JRES_PS">H_JRES_PS</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_PSYCHE"></input>
                                 <label for="H_PSYCHE">H_PSYCHE</label>
                             </li>
                             <li>
-                                <input type="radio" name="h1" id="H_TSE_PSYCHE"></input>
-                                <label for="H_TSE_PSYCHE">H_TSE_PSYCHE</label>
+                                <input type="radio" name="h1" id="H_PSYCHE_TSE"></input>
+                                <label for="H_PSYCHE_TSE">H_PSYCHE_TSE</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_TT_CN"></input>
