website: remove copyright notice

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 </dl>
             </div><!-- /faq }}}1 -->
 
-            <span class="small">&copy; Jonathan Yong, 2020–2021. Current version: v<span id="version"></span></span>
+            <span class="small">Current version: v<span id="version"></span></span>
             <!-- Source code is available on <a href="https://github.com/yongrenjie/genesis">GitHub</a>. -->
         </div><!-- /main-wrapper -->
 
