website, pprogs: implement F2 J-coupled seHSQC

--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
                                 <label for="c13_sehsqc">seHSQC</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="c13_sehsqc_f2j"></input>
+                                <label for="c13_sehsqc_f2j">F2 J-seHSQC</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="c13_sehsqc_tocsy"></input>
                                 <label for="c13_sehsqc_tocsy">seHSQC-TOCSY</label>
                             </li>
@@ -250,8 +254,16 @@
                                 <label for="C_SEHSQC">C_SEHSQC</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="C_SEHSQCJ"></input>
+                                <label for="C_SEHSQCJ">C_SEHSQCJ</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="C_SEHSQC_OR"></input>
                                 <label for="C_SEHSQC_OR">C_SEHSQC_OR</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_SEHSQCJ_OR"></input>
+                                <label for="C_SEHSQCJ_OR">C_SEHSQCJ_OR</label>
                             </li>
                             <li>
                                 <input type="radio" name="c13" id="C_SEHSQC_DP"></input>
