website, pprogs: add 13C HMQC
15N HMQC code has to be changed to 'Mn', too.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                                 <label for="c13_hsqc_tocsy">HSQC-TOCSY</label>
                             </li>
                             <li>
+                                <input type="radio" name="c13" id="c13_hmqc"></input>
+                                <label for="c13_hmqc">HMQC</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="c13" id="c13_sehsqc"></input>
                                 <label for="c13_sehsqc">seHSQC</label>
                             </li>
@@ -296,6 +300,10 @@
                             <li>
                                 <input type="radio" name="c13" id="C_SEHSQCT_OR"></input>
                                 <label for="C_SEHSQCT_OR">C_SEHSQCT_OR</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="c13" id="C_HMQC"></input>
+                                <label for="C_HMQC">C_HMQC</label>
                             </li>
                             <li>
                                 <input type="radio" name="c13" id="C_HSQCJ_K"></input>
