website, pprogs: add EA COSY/ROESY

--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@
                                 <label for="h1_roesy_ad">ROESY (ad.)</label>
                             </li>
                             <li>
+                                <input type="radio" name="h1" id="h1_cosy_roesy"></input>
+                                <label for="h1_cosy_roesy">COSY·ROESY</label>
+                            </li>
+                            <li>
                                 <input type="radio" name="h1" id="h1_cosy_roesy_st"></input>
                                 <label for="h1_cosy_roesy_st">COSY·ROESY St</label>
                             </li>
@@ -431,6 +435,10 @@
                             <li>
                                 <input type="radio" name="h1" id="H_ROESY_AD"></input>
                                 <label for="H_ROESY_AD">H_ROESY_AD</label>
+                            </li>
+                            <li>
+                                <input type="radio" name="h1" id="H_CORO"></input>
+                                <label for="H_CORO">H_CORO</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="H_CORO_ST"></input>
