website: prevent generation of `BC`-type sequences
Outside of dev mode, at least. Obviously, everything is still possible
in dev mode.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="h1_cosy_roesy"></input>
-                                <label for="h1_cosy_roesy">COSY·ROESY</label>
+                                <label for="h1_cosy_roesy">COSY·ROESY EA</label>
                             </li>
                             <li>
                                 <input type="radio" name="h1" id="h1_cosy_roesy_st"></input>
@@ -518,7 +518,7 @@
 
             <h2>Pulse programme text</h2> <!-- {{{1 --->
             <div id="pulprog">
-                <textarea id="pulprog_text" rows=30 placeholder="Select two or more modules to generate pulse programme..." readonly></textarea>
+                <textarea id="pulprog_text" rows=30 readonly></textarea>
             </div> <!-- }}}1 -->
 
             <h2 id="faq_h2">FAQ</h2> <!-- {{{1 -->
